# docker-zulip

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mailmap  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  IMAGE_TAG  LICENSE  Makefile  README.md  TODO  UPGRADING.md  build_and_push_image.sh  certbot-deploy-hook  compose.override.yaml  compose.override.yaml.example  compose.yaml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  lintconf.yaml  manage.py  package.json  pyproject.toml  upgrade-postgresql  zulip-certbot-setup
.circleci/: config.yml
.claude/: CLAUDE.md
.github/: dependabot.yml  (+1 more)
ci/: base.env  (+3 more)
docs/: compose.md  conf.py  environment.md  helm.md  high-availability.md  incoming-email.md  index.md  manual-configuration.md  outgoing-proxy.md  pyproject.toml  reverse-proxies.md  upgrading.md
docs/how-to/: compose-authentication.md  compose-backups.md  compose-build.md  compose-commands.md  compose-existing-services.md  compose-getting-started.md  compose-incoming-email.md  compose-index.md  compose-manual-configuration.md  compose-outgoing-proxy.md  compose-ports.md  compose-secrets.md  compose-settings.md  compose-ssl.md  compose-upgrading-from-legacy.md  compose-upgrading.md  helm-commands.md  helm-existing-services.md  helm-getting-started.md  helm-index.md  helm-ingress.md  helm-persistence.md  helm-proxy-trust.md  helm-settings.md  helm-ssl.md  helm-upgrading.md
docs/manual/: docker-compose.md  index.md
docs/reference/: app-commands.md  data-volume.md  environment-vars.md  index.md  ports.md  versioning.md
(+219 files in other folders)
